--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "0.18.1",
     "element-ui": "2.13.0",
+    "open-browser-webpack-plugin": "^0.0.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "3.1.0"
