--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "axios": "0.18.1",
+    "@vant/touch-emulator": "^1.2.0",
+    "axios": "^0.18.1",
     "element-ui": "2.13.0",
+    "js-cookie": "^2.2.1",
+    "lib-flexible": "^0.3.2",
     "open-browser-webpack-plugin": "^0.0.5",
+    "vant": "^2.10.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuex": "3.1.0"
+    "vuex": "3.1.0",
+    "want": "0.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -41,6 +46,7 @@
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
+    "postcss-pxtorem": "^5.1.1",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
     "sass-loader": "^7.1.0",
