--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@vant/touch-emulator": "^1.2.0",
     "axios": "^0.18.1",
+    "better-scroll": "^2.0.1",
     "element-ui": "2.13.0",
     "js-cookie": "^2.2.1",
     "lib-flexible": "^0.3.2",
     "open-browser-webpack-plugin": "^0.0.5",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^3.0.2",
     "vant": "^2.10.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
