--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vant/touch-emulator": "^1.2.0",
     "axios": "^0.18.1",
     "better-scroll": "^2.0.1",
+    "crypto-js": "^4.0.0",
     "element-ui": "2.13.0",
     "js-cookie": "^2.2.1",
     "lib-flexible": "^0.3.2",
